# remember

./: .dockerignore  .env  .env.template  .gitignore  README.md  docker-compose.yaml  main.ipynb  main.py  pyproject.toml
.github/actions/: setup-cloud-credentials.yaml  setup-ssh-keys.yaml
.github/actions/repository-name/: action.yaml
.github/actions/setup-cloud-credentials/: action.yaml
.github/actions/setup-repository/: action.yaml
.github/actions/setup-server-certificates/: action.yaml
.github/actions/setup-ssh-keys/: action.yaml
.github/workflows/: deploy-cloud-app.yaml  deploy-cloud-db.yaml  deploy-cloud-manual.yaml  deploy-cloud.yaml  deploy-gce-manual.yaml  deploy-gce.yaml  docker-build-push.yaml  setup-docker-manual.yaml
backend/: Dockerfile  dependencies.py  main.py
backend/routers/: account.py  card.py  category.py  default.py  public.py  search.py
backend/utils/: __init__.py  text_html.py  wrapper.py
caddy/: Caddyfile  Dockerfile
certs/: generate.sh
data/: better.pkl  cards.pkl  master.pkl  sample.pkl
database/: Dockerfile  backup.py  crontab  db_check.py  docker-compose.yaml  users.js
frontend/: .env  Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  Cards.js  Category.css  Category.js  Common.css  Common.js  Random.js  index.js  reportWebVitals.js
frontend/src/auth/: Account.js  AuthProvider.js  Login.js  (+1 more)
localtunnel/: Dockerfile
nginx/: Dockerfile  default.conf
ngrok/: ngrok.yaml
notebooks/: mongo.ipynb
src/remember/: __init__.py  __main__.py  accounts.py  app.py  backup.py  bot.py  card.py  category.py  search.py  singleton.py  statistics.py  utils.py
(+13 files in other folders)
